# bscxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  bscxx.json  scoop_bscxx.json
doc/: getting_started.md
include/addons/: console_color.h
include/core/: common.h  generater.h  generator.h
src/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  console_color.h  create_project.h  test.cc
